spacing fixes

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -52,6 +52,23 @@ body {
 }
 
 
+/* #banner-logo {
+    animation: pulse 3s ease-in-out infinite;
+}
+
+@keyframes pulse {
+    0% {
+        transform: scale(0.95);
+    }
+    50% {
+        transform: scale(1.0);
+    }
+    100% {
+        transform: scale(0.95);
+    }
+} */
+
+
 /* Breakpoints */
 
 @media screen and (min-width: 576px) {
